preview & filter feature
Добавлена новая ручка для предпросмотра.
Добавлена возможность пользователя указывать параметры фильтров
